--- a/index.html
+++ b/index.html
@@ -1,20 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Mon CV</title>
 </head>
 <body>
- <h1>Hafsa Robleh's Portfolio</h1>
- <h2>I'm a Web developer</h2>
- <hr/>
-<a href="./public/movie-ranking.html"><h2>Movie Ranking Project</h2></a>
- <img src="./public/Capture d’écran 2025-01-21 063802.png"/>
-<a href="./public/index.html"><h2>Birthday Invite Peoject</h2></a>
- <img src="./public/Capture d’écran 2025-01-21 065100.png"/>
- <hr/>
- <a href="./public/about.html">About me</a> <a href="./public/contact.html">Contact me</a>
+   <h2>Hafsa Robleh Isman</h2> 
+   <img src="./WhatsApp Image 2025-01-22 at 06.34.16.jpeg" alt="`l'image de hafsa" height="100" width="100"/>
+<hr/>
+   <h3>PROFIL PROFESSIONNEL</h3>
+   <p>Autonome et enthousiaste, mes premières expériences m'ont permis de renforcer mes acquis et d'appréhender les différents outils et technique. En quête de nouveaux challenges,  je souhaite rejoindre une organisation à laquelle je pourrais apporter  mon dynamisme et mon goût du challenge.</p>
+<hr/>
+<h3>PARCOURS PROFESSIONNEL</h3>
+<p><b><u>Projet fin d'etude: </u></b> 05/2024 Résolution des problèmes de contact avec le programme d'élément finis par ANSYS.</p>
+<p><b><u>Recherche et développement :</u></b>12/2023 Opérateur d'instrument de topographie-I au sein de <b>Municipalité métropolaine d'Ankara et Université de Gazi</b>.</p>
+<p><b><u>Recherche et développement:</u></b> 11/2023 Etudes sur l'interaction entre les tremblements de terre et les sols (Liquéfaction).</p>
+<p><b><u>Projet tutore:</u></b> 04/2021-06/2021  La conception de projet de construction d'un  local commercial en RDC et deux étages d'habitation de trois appartement de type F3. </p>
+<p><b><u>Stage du 2èm année:</u></b> 02/2021-03/2021 Dans un période de 6 semaines au sein de l'Entreprise Dawaleh construction, aide ingénieur, et ma mission était de contrôlé les travaux réalisé ainsi que l’avancement du chantier. </p>
+<p><b><u>Projet Professionnel:</u></b> 10/2020-01/2021
+   Le Dimensionnement d'un Bâtiment R+1, ainsi que la réalisation de plan de Coffrage, fondations et des éléments porteurs.
+   </p>
+<p><b><u>Stage de la 1ère année:</u></b>02/2020-03/2020
+   Dans un période de 1 mois au sein de l'Entreprise AL-neima immobilière  à Djibouti,  je suivi la construction d'un bâtiment r+1 sur un chantier autant que contrôleur.
+  </p>
+  <hr/>
+  <h3>FORMATION</h3>
+  <p><b> Master 2: (en cour de préparation)  </b></p>
+  <p><b>Master 1:</b> 06/2024  Application sur le terrain dans le domaine de l'ingénierie  géotechnique,<b>Université de ÇANKIRI  KARATEKIN.</b> </p>
+   <p>  <b>Licence Appliqué  En Génie Civil:</b>  2022/2021 mention bien ,<b>Université de Djibouti.</b></p>
+  <hr/>
+   <h3>LOGICIELS ET OUTILS </h3>
+   <p><b>Logiciels:</b> Word, Excel, Logiciel Robot, RDM6, ArchiCAD, AutoCAD, QGIS, Latex, ANSYS, REVIT, TOPO, SURFER</p>
+   Customer service: ⭐️⭐️⭐️⭐️⭐️
 </body>
 </html>
-
